syntax = "proto3";

package whu.lambda.web;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message Activity{
    string name = 1;
    string time = 2;
    string place = 3;
    string status = 4;
    string content = 5;
    bool is_valid = 6;
    string summary = 7;
    string author = 8;
    string cover_url = 9;
    string tags = 10;
    google.protobuf.Timestamp created_at = 11;
}

message Article{
    string name = 1;
    string author = 2;
    google.protobuf.Timestamp created_at = 3;
    string cover_url = 4;
    string content = 5;
    bool is_valid = 6;
    string about = 7;
    string tags = 8;
}

service Anonymous{
    rpc GetActivity(google.protobuf.Int32Value) returns (Activity);
    rpc GetArticle(google.protobuf.Int32Value) returns (Article);
}